Transformacion Fragment a Activity  Se convirtieron los Fragment a Activity pues asi se tiene un mejor control sobre el ciclo de vida de la aplicación, ya que el usuario no deberia volver atras.  * MasterFragment -> MasterActivity  * SlaveFragment -> SlaveActivity
 Se cambio el layout de error por un fragment, de modo que pueda ser usado en otras partes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.SlaveActivity"
+            android:label="@string/SLAVE_APP_NAME" />
+        <activity
+            android:name=".activities.MasterActivity"
+            android:label="@string/MASTER_APP_NAME" />
     </application>
 
 </manifest>
