--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.google.guava:guava:19.0-rc2'
     compile files('libs/Sphero-Android-SDK/RobotLibrary.jar')
 }
