--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,16 +24,20 @@
         </activity>
         <activity
             android:name=".activities.SlaveActivity"
-            android:label="@string/SLAVE_APP_NAME" />
+            android:label="@string/SLAVE_APP_NAME"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.MasterActivity"
-            android:label="@string/MASTER_APP_NAME" />
+            android:label="@string/MASTER_APP_NAME"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.MasterExercise"
-            android:label="@string/MASTER_EXERCISE_APP_NAME" />
+            android:label="@string/MASTER_EXERCISE_APP_NAME"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.SlaveExercise"
-            android:label="@string/SLAVE_EXERCISE_APP_NAME" />
+            android:label="@string/SLAVE_EXERCISE_APP_NAME"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
